--- a/PeridotCoZAndroid/app/src/main/res/layout/user_login.xml
+++ b/PeridotCoZAndroid/app/src/main/res/layout/user_login.xml
@@ -7,7 +7,7 @@ android:layout_height="fill_parent">
     <Button
         android:id="@+id/Button"
         android:text="Ok"
-        android:layout_below="@id/AddPassword"
+        android:layout_below="@+id/AddPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </Button>
@@ -29,7 +29,7 @@ android:layout_height="fill_parent">
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Enter your login password"
-        android:layout_below="@id/AddName"
+        android:layout_below="@+id/AddName"
         android:layout_marginBottom="20dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
