--- a/PeridotCoZAndroid/app/src/main/res/layout/activity_login.xml
+++ b/PeridotCoZAndroid/app/src/main/res/layout/activity_login.xml
@@ -5,15 +5,15 @@ android:layout_width="fill_parent"
 android:layout_height="fill_parent">
 
     <Button
-        android:id="@+id/Button"
-        android:text="Ok"
-        android:layout_below="@+id/AddPassword"
+        android:id="@+id/loginButton"
+        android:text="Login"
+        android:layout_below="@+id/loginPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </Button>
 
     <EditText
-        android:id="@+id/AddName"
+        android:id="@+id/loginName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Enter your login name"
@@ -25,14 +25,26 @@ android:layout_height="fill_parent">
     </EditText>
 
     <EditText
-        android:id="@+id/AddPassword"
+        android:id="@+id/loginPassword"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Enter your login password"
-        android:layout_below="@+id/AddName"
+        android:layout_below="@+id/loginName"
         android:layout_marginBottom="20dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
     </EditText>
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/registerHereLink"
+        android:layout_below="@+id/loginButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="28dp"
+        android:layout_alignRight="@+id/loginButton"
+        android:layout_alignEnd="@+id/loginButton" />
 
 </RelativeLayout>
