--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,8 @@ android:layout_height="fill_parent">
         android:layout_below="@+id/loginName"
         android:layout_marginBottom="20dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:inputType="textPassword">
     </EditText>
 
     <TextView
