--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,14 +9,15 @@ android:layout_height="fill_parent">
         android:text="Login"
         android:layout_below="@+id/loginPassword"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="saveData">
     </Button>
 
     <EditText
         android:id="@+id/loginName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Enter your login name"
+        android:hint="Enter your login name"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -28,7 +29,7 @@ android:layout_height="fill_parent">
         android:id="@+id/loginPassword"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Enter your login password"
+        android:hint="Enter your login password"
         android:layout_below="@+id/loginName"
         android:layout_marginBottom="20dp"
         android:layout_alignParentLeft="true"
