--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,10 @@
     tools:context="com.greenfox.peridot.peridot_coz_android.activity.MainActivity">
 
     <TextView
+        android:id="@+id/welcomeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="You have succesfully logged in. Congrats!" />
+        android:text="You shouldn't be able to see this" />
 
     <Button
         android:text="Logout"
