--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,99 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_marginTop="20dp">
-
-
-<LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        android:elevation="4dp"
-        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    <EditText
-        android:id="@+id/loginName"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter your login name"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="40dp">
-    </EditText>
-
-    <EditText
-        android:id="@+id/loginPassword"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter your login password"
-        android:layout_below="@+id/loginName"
-        android:layout_marginBottom="20dp"
-        android:layout_alignParentLeft="true"
-        android:inputType="textPassword">
-        <!--android:layout_alignParentStart="true"-->
-    </EditText>
-
-    <Button
-        android:onClick="saveData"
-        android:id="@+id/loginButton"
-        android:text="Login"
-        android:layout_below="@+id/loginPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </Button>
-
-    <Button
-        android:onClick="getData"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Display Info"
-        android:id="@+id/displayButton"
-        android:layout_alignBottom="@+id/loginButton"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
-    </Button>
-
-    <TextView
-        android:text="Register Here"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/registerHereLink"
-        android:layout_below="@+id/loginButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="28dp"
-        android:layout_alignRight="@+id/loginButton"
-        android:layout_alignEnd="@+id/loginButton" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/dataView"
-        android:layout_below="@+id/loginButton"
-        android:layout_toLeftOf="@+id/displayButton"
-        android:layout_toStartOf="@+id/displayButton"
-        android:layout_marginTop="61dp" />
-
-    </RelativeLayout>
-</LinearLayout>
-
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -103,10 +8,10 @@
         tools:openDrawer="start"
         android:fitsSystemWindows="false">
 
-        <!--        <include
+               <include
                     layout="@layout/app_bar_left_navigation"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />-->
+                    android:layout_height="match_parent" />
 
         <android.support.design.widget.NavigationView
             android:id="@+id/nav_view"
@@ -118,5 +23,3 @@
             app:menu="@menu/activity_left_navigation_drawer" />
 
     </android.support.v4.widget.DrawerLayout>
-
-</RelativeLayout>
