--- a/app/src/main/res/layout/app_bar_left_navigation.xml
+++ b/app/src/main/res/layout/app_bar_left_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="com.greenfox.peridot.peridot_coz_android.activity.LoginActivity">
 
@@ -16,8 +16,10 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:background="@color/colorPrimary"
+            android:elevation="4dp"
+            app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            />
 
     </android.support.design.widget.AppBarLayout>
 
