navigation drawer now has multiple options with fragments created for each

--- a/app/src/main/res/layout/buildings_overview_layout.xml
+++ b/app/src/main/res/layout/buildings_overview_layout.xml
@@ -4,7 +4,7 @@
     android:background="@android:color/holo_green_dark">
 
     <TextView
-        android:text="You are on the second fragment layout"
+        android:text="This will be the BUILDINGS overview."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
