--- a/app/src/main/res/menu/activity_left_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_left_navigation_drawer.xml
@@ -16,6 +16,9 @@
         <item
             android:id="@+id/nav_battle"
             android:title="Battle"/>
+        <item
+            android:id="@+id/nav_resources"
+            android:title="Resources"/>
     </group>
 
     <item android:title="Communicate">
