--- a/app/src/main/res/layout/resources_overview_layout.xml
+++ b/app/src/main/res/layout/resources_overview_layout.xml
@@ -16,5 +16,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="43dp"
-        android:layout_below="@+id/secondLayout" />
+        android:layout_below="@+id/secondLayout"
+        android:id="@+id/resourcesListView" />
 </RelativeLayout>
