--- a/app/src/main/res/layout/buildings_overview_layout.xml
+++ b/app/src/main/res/layout/buildings_overview_layout.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@android:color/holo_green_dark">
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
-        android:text="This will be the BUILDINGS overview."
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="151dp"
-        android:id="@+id/secondLayout" />
+    <ListView
+        android:id="@+id/listViewBuilding"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
+
 </RelativeLayout>
