--- a/app/src/main/res/layout/nav_header_left_navigation.xml
+++ b/app/src/main/res/layout/nav_header_left_navigation.xml
@@ -17,13 +17,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        app:srcCompat="@drawable/ic_castle_white" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Peridot Clan"
+        android:text="Kingdom of Peridot"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
