--- a/app/src/main/res/layout/nav_header_left_navigation.xml
+++ b/app/src/main/res/layout/nav_header_left_navigation.xml
@@ -15,14 +15,14 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="61dp"
+        android:layout_width="93dp"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@drawable/ic_castle_white"
-        android:layout_weight="0.29" />
+        android:layout_weight="0.62" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Kingdom of Peridot"
