--- a/app/src/main/res/layout/troops_overview_layout.xml
+++ b/app/src/main/res/layout/troops_overview_layout.xml
@@ -3,12 +3,12 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="@android:color/holo_purple"  >
 
-    <TextView
-        android:text="This will be the TROOPS overview."
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/troopsList"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="151dp"
-        android:id="@+id/secondLayout" />
+        android:stackFromBottom="true"
+        android:transcriptMode="alwaysScroll"/>
+
 </RelativeLayout>
