--- a/app/src/main/res/menu/activity_left_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_left_navigation_drawer.xml
@@ -20,6 +20,7 @@
             android:title="Battle"/>
         <item
             android:id="@+id/nav_resources"
+            android:icon="@drawable/ic_coin_black"
             android:title="Resources"/>
     </group>
 
