--- a/app/src/main/res/layout/kingdom_overview_layout.xml
+++ b/app/src/main/res/layout/kingdom_overview_layout.xml
@@ -16,8 +16,8 @@
         android:layout_alignParentStart="true">
 
         <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             <TextView
                 android:text="Buildings"
                 android:layout_width="wrap_content"
@@ -26,6 +26,16 @@
                 android:paddingLeft="10dp"
                 android:textSize="25dp"
                 android:textStyle="bold"
+                android:gravity="left"/>
+
+            <TextView
+                android:text="17 finished"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textview_finished_buildings"
+                android:paddingLeft="10dp"
+                android:textSize="25dp"
+                android:layout_centerInParent="true"
                 android:gravity="left"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
@@ -43,8 +53,8 @@
         android:layout_marginTop="31dp">
 
         <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             <TextView
                 android:text="Troops"
                 android:layout_width="wrap_content"
@@ -53,6 +63,15 @@
                 android:paddingLeft="10dp"
                 android:textSize="25dp"
                 android:textStyle="bold"
+                android:gravity="left"/>
+            <TextView
+                android:text="12 finished"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textview_finished_troops"
+                android:paddingLeft="10dp"
+                android:textSize="25dp"
+                android:layout_centerInParent="true"
                 android:gravity="left"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
@@ -70,8 +89,8 @@
         android:layout_alignParentStart="true">
 
         <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             <TextView
                 android:text="Resources"
                 android:layout_width="wrap_content"
@@ -80,6 +99,26 @@
                 android:paddingLeft="10dp"
                 android:textSize="25dp"
                 android:textStyle="bold"
+                android:gravity="left"/>
+            <TextView
+                android:text="500 gold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textview_gold"
+                android:paddingLeft="10dp"
+                android:textSize="25dp"
+                android:layout_centerInParent="true"
+                android:gravity="left"/>
+            <TextView
+                android:text="1200 gold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textview_food"
+                android:paddingLeft="10dp"
+                android:paddingBottom="25dp"
+                android:textSize="25dp"
+                android:layout_centerInParent="true"
+                android:layout_alignParentBottom="true"
                 android:gravity="left"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
