Conflicts redone and solved

--- a/app/src/main/res/layout/buildings_overview_layout.xml
+++ b/app/src/main/res/layout/buildings_overview_layout.xml
@@ -1,62 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@android:color/holo_green_dark">
 
     <TextView
-        android:text="This will be the BUILDINGS overview."
+        android:id="@+id/secondLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="151dp"
-        android:id="@+id/secondLayout" />
+        android:text="This will be the BUILDINGS overview." />
+
+    <ListView
+        android:id="@+id/listViewBuilding"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true">
+
+    </ListView>
+
 
     <android.support.design.widget.FloatingActionButton
-        android:rotation="45"
+        android:id="@+id/mainFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        app:fabSize="normal"
-        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="15dp"
         android:layout_marginRight="15dp"
-        android:id="@+id/mainFab"
-        app:backgroundTint="@android:color/holo_blue_dark" />
+        android:clickable="true"
+        android:rotation="45"
+        app:backgroundTint="@android:color/holo_blue_dark"
+        app:fabSize="normal"
+        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/farmFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:clickable="false"
-        app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_menu_compass"
         android:layout_above="@+id/mineFab"
         android:layout_alignLeft="@+id/mineFab"
         android:layout_alignStart="@+id/mineFab"
         android:layout_marginBottom="15dp"
         android:layout_marginRight="7.5dp"
+        android:clickable="false"
+        android:visibility="invisible"
+        app:backgroundTint="@android:color/holo_blue_bright"
 
-        android:id="@+id/farmFab"
-        app:backgroundTint="@android:color/holo_blue_bright" />
+        app:fabSize="mini"
+        app:srcCompat="@android:drawable/ic_menu_compass" />
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/mineFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:clickable="false"
-        app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_menu_view"
+        android:layout_above="@+id/mainFab"
+        android:layout_alignEnd="@+id/mainFab"
+        android:layout_alignRight="@+id/mainFab"
         android:layout_marginBottom="15dp"
         android:layout_marginRight="7.5dp"
 
-        android:id="@+id/mineFab"
-        android:layout_above="@+id/mainFab"
-        android:layout_alignRight="@+id/mainFab"
-        android:layout_alignEnd="@+id/mainFab"
-        app:backgroundTint="@android:color/holo_blue_light" />
+        android:clickable="false"
+        android:visibility="invisible"
+        app:backgroundTint="@android:color/holo_blue_light"
+        app:fabSize="mini"
+        app:srcCompat="@android:drawable/ic_menu_view" />
 
 </RelativeLayout>
