--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:weightSum="1">
 
     <EditText
-        android:text="Enter your username"
+        android:hint="Enter your username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/regUsername"
@@ -14,12 +14,21 @@
         android:layout_marginBottom="20dp" />
 
     <EditText
-        android:text="Enter your password"
+        android:hint="Enter your password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/regPassword"
         android:layout_weight="0.07"
         android:layout_marginBottom="20dp" />
+
+    <EditText
+        android:hint="Enter your new kingdom name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/regKingdom"
+        android:layout_weight="0.07"
+        android:layout_marginBottom="20dp" />
+
     <Button
         android:text="Register"
         android:layout_width="110dp"
